--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "feluda"
-version = "1.3.0"
+version = "1.4.0"
 edition = "2021"
 description = "A CLI tool to check dependency licenses."
 readme = "README.md"
-license = "CC-BY-NC-ND-4.0"
+license = "MIT"
 repository = "https://github.com/anistark/feluda"
 homepage = "https://github.com/anistark/feluda"
 keywords = ["cli", "license", "dependencies", "node", "check"]
@@ -28,6 +28,7 @@ ratatui = "0.29.0"
 unicode-width = "0.2.0"
 spinners = "4.1.1"
 serde_yaml = "0.9.34"
+colored = "3.0.0"
 
 [dev-dependencies]
 tempfile = "3.2"
