update: fix naming and update docs with wget

--- a/examples/ci/license-check.yml
+++ b/examples/ci/license-check.yml
@@ -1,4 +1,5 @@
-# Example: .github/workflows/license-check.yml
+# License Check Workflow
+# Save this as .github/workflows/license-check.yml in your repository
 name: License Check
 
 permissions:
