--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -2,5 +2,6 @@ sphinx>=7.0
 sphinx-design>=0.6.1
 sphinx-tabs>=3.4.7
 sphinx-iconify>=0.2.1
+sphinx-copybutton>=0.5.2
 shibuya>=2025.9.25        # Nice modern theme
 doc8>=1.1.1               # RST linter
