--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,6 +1,3 @@
-# Read the Docs configuration file
-# See https://docs.readthedocs.io/en/stable/config-file/v2.html for details
-
 version: 2
 
 build:
@@ -10,6 +7,7 @@ build:
 
 sphinx:
   configuration: docs/source/conf.py
+  builder: dirhtml
 
 python:
   install:
